updated html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,254 @@
-<p>Austin Smith</p>
+<!doctype html>
+<html>
+    <head>
+        <title>2018 Top 10</title>
+        <style type="text/css">
+        html, body {
+            height: 100%;
+        }
+                img.one {
+            height: 50%;
+            width: 50%;
+        }</style>
+    </head>
+    <body>
+        <header>
+            <h1><u><b>2018 Top 10 Books</b></u></h1>
+            <figure><img class="one" src="https://i.imgur.com/dwbp4CA.jpg" alt="All 10 books"></figure>
+            <p>These are my 10 favorite books from 2018, as stated in the title. They are not categorized alphabetically, in any order of quality, importance, or length, but by the physical size of the book. There are few things more important concerning books than the order in which they are stored. At least for photos.</p>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#elantris">Elantris by Brandon Sanderson</a>
+                    </li>
+                    <li>
+                        <a href="#eotw">Eye of the World by Robert Jordan</a>
+                    </li>
+                    <li>
+                        <a href="#warofart">The War of Art by Steven Pressfield</a>
+                    </li>
+                    <li>
+                        <a href="#underthebanner">Under the Banner of Heaven by Jon Krakauer</a>
+                    </li>
+                    <li>
+                        <a href="#halfblood">Harry Potter and the Half-Blood Prince by J.K. Rowling</a>
+                    </li>
+                    <li>
+                        <a href="#hobbit">The Hobbit by J.R.R. Tolkien</a>
+                    </li>
+                    <li>
+                        <a href="#ladyofthelake">The Lady of the Lake by Andrzej Sapkowski</a>
+                    </li>
+                    <li>
+                        <a href="#jesus">The Jesus I Never Knew by Philip Yancey</a>
+                    </li>
+                    <li>
+                        <a href="#12rules">12 Rules for Life by Jordan Peterson</a>
+                    </li>
+                    <li>
+                        <a href="#nanking">The Rape of Nanking by Iris Chang</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <article>
+                <section>
+                    <a name="elantris"></a>
+                    <h2>Elantris by Brandon Sanderson</h2>
+                    <figure>
+                        <img class="one" src="https://i.imgur.com/mybOqim.jpg" alt="An image of the aforementioned book.">
+                    </figure>
+                    <ul>
+                        <li>Published in 2006
+                        </li>
+                        <li>638 Pages
+                        </li>
+                        <li><a href="https://goo.gl/nCm76h">Buy Here</a>
+                        </li>
+                    </ul>
+                    <p>Some stuff here</p>
+                </section>
+                <section>
+                    <a name="eotw"></a>
+                    <h2>The Eye of the World by Robert Jordan</h2>
+                    <figure>
+                        <img class="one" src="https://i.imgur.com/fGxZYby.jpg" alt="An image of the aforementioned book.">
+                    </figure>
+                    <ul>
+                        <li>Published in 1990
+                        </li>
+                        <li>782 Pages
+                        </li>
+                        <li><a href="https://goo.gl/YDEVAY">Buy Here</a>
+                        </li>
+                    </ul>
+                    <p>Some stuff here</p>
+                </section>
+                <section>
+                    <a name="warofart"></a>
+                    <h2>The War of Art by Steven Pressfield</h2>
+                    <figure>
+                        <img class="one" src="https://i.imgur.com/agkYBYO.jpg" alt="An image of the aforementioned book.">
+                    </figure>
+                    <ul>
+                        <li>Published in 2012
+                        </li>
+                        <li>192 Pages
+                        </li>
+                        <li><a href="https://goo.gl/DDZ8fH">Buy Here</a>
+                        </li>
+                    </ul>
+                    <p>Some stuff here</p>
+                </section>
+                <section>
+                    <a name="underthebanner"></a>
+                    <h2>Under the Banner of Heaven by Jon Krakauer</h2>
+                    <figure>
+                        <img class="one" src="https://i.imgur.com/gPWyrzN.jpg" alt="An image of the aforementioned book.">
+                    </figure>
+                    <ul>
+                        <li>Published in 2004
+                        </li>
+                        <li>334 Pages
+                        </li>
+                        <li><a href="https://goo.gl/H3GSHx">Buy Here</a>
+                        </li>
+                    </ul>
+                    <p>Some stuff here</p>
+                </section>
+                <section>
+                    <a name="halfblood"></a>
+                    <h2>Harry Potter and the Half-Blood Prince by J.K. Rowling</h2>
+                    <figure>
+                        <img class="one" src="https://i.imgur.com/BGnQnvJ.jpg" alt="An image of the aforementioned book.">
+                    </figure>
+                    <ul>
+                        <li>Published in 2006
+                        </li>
+                        <li>652 Pages
+                        </li>
+                        <li><a href="https://goo.gl/KSG5Ua">Buy Here</a>
+                        </li>
+                    </ul>
+                    <p>Some stuff here</p>
+                </section>
+                <section>
+                    <a name="hobbit"></a>
+                    <h2>The Hobbit by J.R.R. Tolkien</h2>
+                    <figure>
+                        <img class="one" src="https://i.imgur.com/RuBSGrh.jpg" alt="An image of the aforementioned book.">
+                    </figure>
+                    <ul>
+                        <li>Published in 1937
+                        </li>
+                        <li>276 Pages
+                        </li>
+                        <li><a href="https://goo.gl/2kYQav">Buy Here</a>
+                        </li>
+                    </ul>
+                    <p>Some stuff here</p>
+                </section>
+                <section>
+                    <a name="ladyofthelake"></a>
+                    <h2>The Lady of the Lake by Andrzej Sapkowski</h2>
+                    <p>Some stuff here</p>
+                    <figure>
+                        <img class="one" src="https://i.imgur.com/1bkWO1m.jpg" alt="An image of the aforementioned book.">
+                    </figure>
+                    <ul>
+                        <li>Published in 1999
+                        </li>
+                        <li>544 Pages
+                        </li>
+                        <li><a href="https://goo.gl/ADpwoR">Buy Here</a>
+                        </li>
+                    </ul>
+                    <p>Some stuff here</p>
+                </section>
+                <section>
+                    <a name="jesus"></a>
+                    <h2>The Jesus I Never Knew by Philip Yancey</h2>
+                    <figure>
+                        <img class="one" src="https://i.imgur.com/1La8fgg.jpg" alt="An image of the aforementioned book.">
+                    </figure>
+                    <ul>
+                        <li>Published in 2002
+                        </li>
+                        <li>275 Pages
+                        </li>
+                        <li><a href="https://goo.gl/8PgRF4">Buy Here</a>
+                        </li>
+                    </ul>
+                    <p>Some stuff here</p>
+                </section>
+                <section>
+                    <a name="12rules"></a>
+                    <h2>12 Rules for Life by Jordan Peterson</h2>
+                    <figure>
+                        <img class="one" src="https://i.imgur.com/U6yt9yN.jpg" alt="An image of the aforementioned book.">
+                    </figure>
+                    <ul>
+                        <li>Published in 2018
+                        </li>
+                        <li>370 Pages
+                        </li>
+                        <li><a href="https://goo.gl/GvdYFQ">Buy Here</a>
+                        </li>
+                    </ul>
+                    <p>Some stuff here</p>
+                </section>
+                <section>
+                    <a name="nanking"></a>
+                    <h2>The Rape of Nanking</h2>
+                    <figure>
+                        <img class="one" src="https://i.imgur.com/ddWeSse.jpg" alt="An image of the aforementioned book."></figure>
+                    <ul>
+                        <li>Published in 2012
+                        </li>
+                        <li>214 Pages
+                        </li>
+                        <li><a href="https://goo.gl/x7Zs2c">Buy Here</a>
+                        </li>
+                    </ul>
+                    <p>Some stuff here</p>
+                </section>
+                <section>
+                    <h2>Extras: Full 2018 Reading List</h2>
+                    <ol>
+                        <li>War of Art by Steven Pressfield, 192pg</li>
+                        <li>Lion's Gate by Steven Pressfield, 448pg</li>
+                        <li>Elantris by Brandon Sanderson, 638pg</li>
+                        <li>I am Legend by Richard Matheson, 160pg</li>
+                        <li>The Jesus I Never Knew by Philip Yancey, 275pg</li>
+                        <li>The Revenant by Michael Punke, 272pg</li>
+                        <li>I, Robot by Isaac Asimov, 253pg</li>
+                        <li>Blood of Elves by Andrzej Sapkowski, 320pg</li>
+                        <li>Time of Contempt by Andrzej Sapkowski, 352pg</li>
+                        <li>Baptism of Fire by Andrzej Sapkowski, 352pg</li>
+                        <li>Tower of Swallows by Andrzej Sapkowski, 464pg</li>
+                        <li>Rape of Nanking by Iris Chang, 214pg</li>
+                        <li>Lady of the Lake by Andrzej Sapkowski, 544pg</li>
+                        <li>12 Rules for Life by Jordan Peterson, 370pg</li>
+                        <li>Child of God by Cormac McCarthy, 197pg</li>
+                        <li>Harry Potter and the Sorcerer’s Stone by J.K. Rowling, 310pg</li>
+                        <li>Harry Potter and the Chamber of Secrets by J.K. Rowling, 341pg</li>
+                        <li>Harry Potter and the Prisoner of Azkaban by J.K. Rowling, 435pg</li>
+                        <li>Harry Potter and the Goblet of Fire by J.K. Rowling, 734pg</li>
+                        <li>Harry Potter and the Order of the Phoenix by J.K. Rowling, 870pg</li>
+                        <li>Harry Potter and the Half Blood Prince by J.K. Rowling, 652pg</li>
+                        <li>Harry Potter and the Deathly Hallows by J.K. Rowling, 759pg</li>
+                        <li>The Hobbit by J.R.R. Tolkien, 276pg</li>
+                        <li>Siddhartha by Herman Hesse, 152pg</li>
+                        <li>Under the Banner of Heaven by Jon Krakauer, 334pg</li>
+                        <li>The Great Gatsby by F. Scott Fitzgerald, 192pg</li>
+                        <li>The Eye of the World by Robert Jordan, 782pg</li>
+                        <li>Silence by Shusaku Endo, 204pg</li>
+                    </ol>
+                </section>
+            </article>
+        </main>
+        <footer><p>&copy; Austin Smith 2019</p>
+        </footer>
+    </body>
+</html>
