--- a/index.html
+++ b/index.html
@@ -2,27 +2,20 @@
 <html>
     <head>
         <title>2018 Top 10</title>
-        <style type="text/css">
-        html, body {
-            height: 100%;
-        }
-                img.one {
-            height: 50%;
-            width: 50%;
-        }</style>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
-            <h1><u><b>2018 Top 10 Books</b></u></h1>
+            <h1><u><b>2018: Top 10 Books</b></u></h1>
             <figure><img class="one" src="https://i.imgur.com/dwbp4CA.jpg" alt="All 10 books"></figure>
             <p>These are my 10 favorite books from 2018, as stated in the title. They are not categorized alphabetically, in any order of quality, importance, or length, but by the physical size of the book. There are few things more important concerning books than the order in which they are stored. At least for photos.</p>
             <nav>
-                <ul>
+                <ol>
                     <li>
                         <a href="#elantris">Elantris by Brandon Sanderson</a>
                     </li>
                     <li>
-                        <a href="#eotw">Eye of the World by Robert Jordan</a>
+                        <a href="#eotw">The Eye of the World by Robert Jordan</a>
                     </li>
                     <li>
                         <a href="#warofart">The War of Art by Steven Pressfield</a>
@@ -48,173 +41,192 @@
                     <li>
                         <a href="#nanking">The Rape of Nanking by Iris Chang</a>
                     </li>
-                </ul>
+                </ol>
             </nav>
         </header>
         <main>
             <article>
                 <section>
                     <a name="elantris"></a>
-                    <h2>Elantris by Brandon Sanderson</h2>
+                    <h2><u>Elantris by Brandon Sanderson</u></h2>
                     <figure>
                         <img class="one" src="https://i.imgur.com/mybOqim.jpg" alt="An image of the aforementioned book.">
                     </figure>
                     <ul>
                         <li>Published in 2006
                         </li>
+                        <li>Standalone
+                        </li>
                         <li>638 Pages
                         </li>
                         <li><a href="https://goo.gl/nCm76h">Buy Here</a>
                         </li>
                     </ul>
-                    <p>Some stuff here</p>
+                    <p>I picked up my first Sanderson novel in August of 2017, and the rest is history. He has quickly become not only one of my favorite fantasy authors, but one of my favorite authors in general. Sanderson has a special knack for world building and finales that I have not seen in comparatives books, and even though Elantris was the first book he published, it is no exception. At just over 600 pages it is a shorter read than his most recent works, and the plot is quick and engaging making it a book you will want to finish in only a few sittings.</p>
                 </section>
                 <section>
                     <a name="eotw"></a>
-                    <h2>The Eye of the World by Robert Jordan</h2>
+                    <h2><u>The Eye of the World by Robert Jordan</u></h2>
                     <figure>
                         <img class="one" src="https://i.imgur.com/fGxZYby.jpg" alt="An image of the aforementioned book.">
                     </figure>
                     <ul>
                         <li>Published in 1990
                         </li>
+                        <li>Book 1 of 14 in the Wheel of Time
+                        </li>
                         <li>782 Pages
                         </li>
                         <li><a href="https://goo.gl/YDEVAY">Buy Here</a>
                         </li>
                     </ul>
-                    <p>Some stuff here</p>
+                    <p>Speaking of the aforementioned Brandon Sanderson, his career was first thrust into the spotlight when he was tasked with finishing the legenary Wheel of Time series. Unfortunately, the original author Robert Jordan passed away after publishing book 11 of 14, leaving the series in limbo. When I found out Sanderson was the one responsible for writing the final three books, my love for his writing drove me to this series. Despite its daunting size I began the first entry in the Wheel of Time at the end of last year. The Eye of the World has been the standard for which many modern fantasy tropes and stories are weighed against, and almost 30 years later it is proven that Jordan's first work deserves its place among the pantheon of timeless works of high fantasy.</p>
                 </section>
                 <section>
                     <a name="warofart"></a>
-                    <h2>The War of Art by Steven Pressfield</h2>
+                    <h2><u>The War of Art by Steven Pressfield</u></h2>
                     <figure>
                         <img class="one" src="https://i.imgur.com/agkYBYO.jpg" alt="An image of the aforementioned book.">
                     </figure>
                     <ul>
                         <li>Published in 2012
                         </li>
+                        <li>Standalone
+                        </li>
                         <li>192 Pages
                         </li>
                         <li><a href="https://goo.gl/DDZ8fH">Buy Here</a>
                         </li>
                     </ul>
-                    <p>Some stuff here</p>
+                    <p>Steven Pressfield is the author of my favorite book of all time, The Gates of Fire. I have read it almost annually and it remains one of the most influential books of my life. When I first became interested in writing myself, naturally Pressfield's nonfiction work for artists came to mind. The War of Art poses the responsibility of creatives in a light that I had not previously heard. It is hard and honest, and does not paint the life of an author in a glamorous life. Instead it focuses on the struggles of doing the work, and the daily battle that takes place to overcome laziness and resistance to doing what we know we should. It is the kick in the pants that any aspiring person needs.</p>
                 </section>
                 <section>
                     <a name="underthebanner"></a>
-                    <h2>Under the Banner of Heaven by Jon Krakauer</h2>
+                    <h2><u>Under the Banner of Heaven by Jon Krakauer</u></h2>
                     <figure>
                         <img class="one" src="https://i.imgur.com/gPWyrzN.jpg" alt="An image of the aforementioned book.">
                     </figure>
                     <ul>
                         <li>Published in 2004
                         </li>
+                        <li>Standalone
+                        </li>
                         <li>334 Pages
                         </li>
                         <li><a href="https://goo.gl/H3GSHx">Buy Here</a>
                         </li>
                     </ul>
-                    <p>Some stuff here</p>
+                    <p>Under the Banner of Heaven is the first book I have read by Jon Krakauer, and with it he has proved his mastry of journalistic story telling. This book tells the story of how a woman and her child were murdered by a pair of LDS extremists, but before the deed is done Krakauer sets the stage with a searing look into the emergence and history of Mormonism. As someone who is intrigued by extremism, each page kept me glued to my seat as the story of Joseph Smith and his followers unfolded before my eyes. The book is an unforgiving look and critique of all religions and extremists, well worth the time to read.</p>
                 </section>
                 <section>
                     <a name="halfblood"></a>
-                    <h2>Harry Potter and the Half-Blood Prince by J.K. Rowling</h2>
+                    <h2><u>Harry Potter and the Half-Blood Prince by J.K. Rowling</u></h2>
                     <figure>
                         <img class="one" src="https://i.imgur.com/BGnQnvJ.jpg" alt="An image of the aforementioned book.">
                     </figure>
                     <ul>
                         <li>Published in 2006
                         </li>
+                        <li>Book 6 of 7 in Harry Potter
+                        </li>
                         <li>652 Pages
                         </li>
                         <li><a href="https://goo.gl/KSG5Ua">Buy Here</a>
                         </li>
                     </ul>
-                    <p>Some stuff here</p>
+                    <p>As someone who loves all things concerning books and movies, it is a verifiable miracle that I was not only able to go 15+ years without seeing or reading Harry Potter, but also without having any of the story spoiled for me. In a culture that is dominated by Harry Potter and its influence, I admit I avoided it at great lengths. This year I finally caved and read the series, and in a matter of days of starting the first book I was finishing the last. There is nothing to say about the series that has not been said before, so I will add simply that The Half-Blood Prince was my personal favorite. Dumbledore was always my favorite character of the series, and if the story remains unspoiled, book 6 has the best moments with him by far.</p>
                 </section>
                 <section>
                     <a name="hobbit"></a>
-                    <h2>The Hobbit by J.R.R. Tolkien</h2>
+                    <h2><u>The Hobbit by J.R.R. Tolkien</u></h2>
                     <figure>
                         <img class="one" src="https://i.imgur.com/RuBSGrh.jpg" alt="An image of the aforementioned book.">
                     </figure>
                     <ul>
                         <li>Published in 1937
                         </li>
+                        <li>Spiritual Predecessor to The Lord of the Rings
+                        </li>
                         <li>276 Pages
                         </li>
                         <li><a href="https://goo.gl/2kYQav">Buy Here</a>
                         </li>
                     </ul>
-                    <p>Some stuff here</p>
+                    <p>Unlike Harry Potter, I have been obsessed with all things Lord of the Rings since the first time I watched The Fellowship of the Ring in 2001. The books remain the greatest work of western fiction even 50 years later, and they are the ultimate gold standard of all fantasy. There was none before, and none since to do it as well as Tolkien. Despite my love for Lord of the Rings I had not read The Hobbit until only last year. The light heartedness and fun story telling of The Hobbit had always distracted me from the grander and darker narrative of following trilogy, but in light of that The Hobbit remains one of the most endearing tales of adventure and exploration.</p>
                 </section>
                 <section>
                     <a name="ladyofthelake"></a>
-                    <h2>The Lady of the Lake by Andrzej Sapkowski</h2>
-                    <p>Some stuff here</p>
+                    <h2><u>The Lady of the Lake by Andrzej Sapkowski</u></h2>
                     <figure>
                         <img class="one" src="https://i.imgur.com/1bkWO1m.jpg" alt="An image of the aforementioned book.">
                     </figure>
                     <ul>
                         <li>Published in 1999
                         </li>
+                        <li>Book 5 of 5 in The Witcher
+                        </li>
                         <li>544 Pages
                         </li>
                         <li><a href="https://goo.gl/ADpwoR">Buy Here</a>
                         </li>
                     </ul>
-                    <p>Some stuff here</p>
+                    <p>Sapkowski is more known for his brash behavior towards the fanbase and devlopers of The Witcher video game series than he is for penning the book series of the same name. Despite his unsavory disposition, he remains a prolific fantasy author in eastern Europe. The Witcher series is less popular with English speaking populations, at it was only recently translated from its original Polish publication. The Lady of the Lake is the final entry in his original five book series concerning the Witcher, and his style, story telling, and emotional weight is never greater than the finale. An author of his caliber stands alone, and while his work is not as accessible as other authors, for those looking for a darker more human look at fantasy, he remains one of my all time favorite niche writers.</p>
                 </section>
                 <section>
                     <a name="jesus"></a>
-                    <h2>The Jesus I Never Knew by Philip Yancey</h2>
+                    <h2><u>The Jesus I Never Knew by Philip Yancey</u></h2>
                     <figure>
                         <img class="one" src="https://i.imgur.com/1La8fgg.jpg" alt="An image of the aforementioned book.">
                     </figure>
                     <ul>
                         <li>Published in 2002
                         </li>
+                        <li>Standalone
+                        </li>
                         <li>275 Pages
                         </li>
                         <li><a href="https://goo.gl/8PgRF4">Buy Here</a>
                         </li>
                     </ul>
-                    <p>Some stuff here</p>
+                    <p>After growing up religious my entire life, The Jesus I Never Knew offers a much simpler and honest look at the life of Christ than I had experienced before. There is much chaff that comes attached to that name due to social and cultural implications, and experiences that are unique to growing up in the west. There are many things I could say about the book, but few would do it justice without the reader experiencing it for themselves. I finished the last page with a greater, more unornamated view of not only Christ, but others as well.</p>
                 </section>
                 <section>
                     <a name="12rules"></a>
-                    <h2>12 Rules for Life by Jordan Peterson</h2>
+                    <h2><u>12 Rules for Life by Jordan Peterson</u></h2>
                     <figure>
                         <img class="one" src="https://i.imgur.com/U6yt9yN.jpg" alt="An image of the aforementioned book.">
                     </figure>
                     <ul>
                         <li>Published in 2018
                         </li>
+                        <li>Standalone
+                        </li>
                         <li>370 Pages
                         </li>
                         <li><a href="https://goo.gl/GvdYFQ">Buy Here</a>
                         </li>
                     </ul>
-                    <p>Some stuff here</p>
+                    <p>Jordan Peterson was easily one of the most infamous names in 2018, not only for his speeches and lectures but also for his best selling book 12 Rules for Life. In light of the criticisms he received, whether warranted or not, 12 Rules for Life was one of the greatest books I have read when it comes to self evaluating my life. The rules stated in the contents of the book are often not revelatory or ground breaking, but he addresses them and helps apply them in such a way that makes them relevant and relatable.</p>
                 </section>
                 <section>
                     <a name="nanking"></a>
-                    <h2>The Rape of Nanking</h2>
+                    <h2><u>The Rape of Nanking</u></h2>
                     <figure>
                         <img class="one" src="https://i.imgur.com/ddWeSse.jpg" alt="An image of the aforementioned book."></figure>
                     <ul>
                         <li>Published in 2012
+                        </li>
+                        <li>Standalone
                         </li>
                         <li>214 Pages
                         </li>
                         <li><a href="https://goo.gl/x7Zs2c">Buy Here</a>
                         </li>
                     </ul>
-                    <p>Some stuff here</p>
+                    <p>The Rape of Nanking is one of the most harrowing and base events of modern history. Often over shadowed or forgotten in light of the second World War, it remains one of the least known and undocumented atrocities of the 20th century. Iris Chang does a masterful job digging into the events that took place during the Rape, telling the story from the perspective of the victims, victimizers, and the benevolent bystanders. The contents remain almost too much to tell, leaving this a story that demands to be experienced for one's self.</p>
                 </section>
                 <section>
-                    <h2>Extras: Full 2018 Reading List</h2>
+                    <h2><u>Extras: Full 2018 Reading List</u></h2>
                     <ol>
                         <li>War of Art by Steven Pressfield, 192pg</li>
                         <li>Lion's Gate by Steven Pressfield, 448pg</li>
