--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>2018 Top 10</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://github.com/amsmith828/html-me-something/blob/master/styles.css">
     </head>
     <body>
         <header>
