--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <h1><u><b>2018: Top 10 Books</b></u></h1>
-            <figure><img class="one" src="https://i.imgur.com/dwbp4CA.jpg" alt="All 10 books"></figure>
+            <figure><img class="two" src="https://i.imgur.com/dwbp4CA.jpg" alt="All 10 books"></figure>
             <p>These are my 10 favorite books from 2018, as stated in the title. They are not categorized alphabetically, in any order of quality, importance, or length, but by the physical size of the book. There are few things more important concerning books than the order in which they are stored. At least for photos.</p>
             <nav>
                 <ol>
